# lalr-parser-gen

./: .gitignore  .gitlab-ci.yml  Cargo.toml  DOCS.md  README.md  grammar.ebnf  run_antlr_tests.sh  snippets_test
antlr/: DflowParser.g4
interpreter/: Cargo.toml
interpreter/src/: ast.rs  ast_printer.rs  interpreter.rs  lib.rs  parse_tree_to_ast.rs  visitor.rs
interpreter/src/ast/: functions.rs  operators.rs  program.rs  statements.rs  variables.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  source.rs  tokens.rs
lexer/tests/: lexer_tests.rs
parser/: Cargo.toml
parser/src/: abstract_syntax_tree.rs  grammar.rs  lalr_parsing_tables.rs  lexer_wrapper.rs  lib.rs  lookaheads_table.rs  lr0_items.rs  lr_parser.rs  parse_tree.rs  test_utils.rs
src/: grammar_input.txt  lib.rs  main.rs  parsing_tables.txt  program.txt
