[package]
name = "dflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = {path = "lexer", version = "0.1.0"}
parser = {path = "parser", version = "0.1.0"}
interpreter = {path = "interpreter", version = "0.1.0"}
lazy_static = "1.4.0"
sha2 = "0.10.0"
hex-literal = "0.3.4"
ptree = "0.4.0"