[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = {version = "0.1.0", path = "../lexer"}
regex = "1"
lazy_static = "1.4.0"
prettytable-rs = "^0.8"
serde = {version = "1.0.132", features = ["derive"] }
serde_yaml = "0.8.23"
generic-array = "0.14.4"
sha2 = "0.10.0"
hex-literal = "0.3.4"
quote = "1.0.14"